k8s/react-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - kairos.gr
    secretName: kairos-tls
  rules:
  - host: kairos.gr
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 80
